# jw_download

./: README.md  example_result.json  pyproject.toml  requirements.txt
jw_download/: __init__.py  config.py  config_default.yaml  main.py  task.py
